prevent logo from stacking with nowrap

--- a/app/assets/stylesheets/omni_nav/uninav/uninav.scss
+++ b/app/assets/stylesheets/omni_nav/uninav/uninav.scss
@@ -28,7 +28,7 @@
 @mixin uninav-drop-shadow {
   // todo: https://tobiasahlin.com/blog/how-to-animate-box-shadow/
   box-shadow: 0 37.125px 70px -12.125px rgba(0, 0, 0, 0.1);
-  transition: box-shadow .5s ease;
+  transition: box-shadow 0.5s ease;
 
   &:hover,
   &:focus,
@@ -74,7 +74,8 @@ html {
 // UNINAV STRUCTURE
 #uninav {
   display: grid;
-  grid-template-areas: "logo secondaryLogo utility"
+  grid-template-areas:
+    "logo secondaryLogo utility"
     "global global cta";
   grid-template-columns: 1fr;
   background-color: $white;
@@ -92,8 +93,8 @@ html {
       align-items: center;
       border-bottom: 1px solid $uninav-light-grey;
       margin-left: 2.5rem;
+      white-space: nowrap;
       @include qbal-fade-enter;
-
 
       &--secondary {
         font-weight: 800;
@@ -105,7 +106,6 @@ html {
         padding-left: 2rem;
         grid-area: secondaryLogo;
         @include qbal-fade-enter;
-
       }
 
       .chapman-logo {
@@ -125,7 +125,6 @@ html {
 
       .uninav {
         &__menu-item--audiences {
-
           a {
             color: $panther-black;
             padding-left: 1.5em;
@@ -212,8 +211,8 @@ html {
           height: 2rem;
 
           &#Layer_1 {
-            margin-right: .8rem;
-            margin-left: .8rem;
+            margin-right: 0.8rem;
+            margin-left: 0.8rem;
           }
         }
       }
@@ -283,7 +282,6 @@ html {
       a {
         color: $panther-black;
       }
-
     }
 
     &__dropdown {
@@ -317,7 +315,7 @@ html {
             padding-bottom: 1rem;
             padding-left: 2rem;
             @include uninav-border-bottom;
-            animation-duration: .05s;
+            animation-duration: 0.05s;
             @include qbal-drop-enter;
 
             @for $i from 1 to 10 {
@@ -354,20 +352,20 @@ html {
     border-right: 1px solid $uninav-light-grey;
   }
 
-  .uninav__dropdown-wrapper>a::after {
-    font-family: 'Font Awesome 5 Free';
+  .uninav__dropdown-wrapper > a::after {
+    font-family: "Font Awesome 5 Free";
     font-weight: 900;
     content: "\f0d7";
     padding-left: 1rem;
     font-size: 1.4rem;
   }
 
-  &>ul {
+  & > ul {
     display: flex;
     align-items: center;
     height: 100%;
 
-    &>li {
+    & > li {
       flex: 100%;
     }
 
@@ -383,7 +381,7 @@ html {
   }
 }
 
-#uninav>div.uninav--cta {
+#uninav > div.uninav--cta {
   grid-area: cta;
   width: 100%;
   display: grid;
@@ -396,7 +394,7 @@ html {
   ul {
     display: flex;
 
-    &>li {
+    & > li {
       flex: 1 100%;
       list-style: none;
       color: $panther-black;
@@ -427,15 +425,15 @@ html {
   }
 }
 
-#uninav>nav {
+#uninav > nav {
   grid-area: nav;
 }
 
-#uninav>global {
+#uninav > global {
   grid-area: global;
 }
 
-#uninav>div.uninav__logo--primary {
+#uninav > div.uninav__logo--primary {
   width: 300px;
   grid-area: logo;
 }
@@ -452,7 +450,7 @@ html {
   flex-direction: column;
   @include uninav-drop-shadow();
 
-  >ul {
+  > ul {
     flex-direction: column;
     justify-content: start;
     text-align: left;
@@ -522,14 +520,15 @@ html {
   }
 
   .uninav__menu-item--audiences {
-    // need a slicker preferably non-js fadeout solution since display: none is not animatable 
+    // need a slicker preferably non-js fadeout solution since display: none is not animatable
     @include qbal-slideLeft-exit;
     display: none;
   }
 
   #uninav {
     display: grid;
-    grid-template-areas: "logo cta utility"
+    grid-template-areas:
+      "logo cta utility"
       "global global global";
     background-color: $white;
 
@@ -537,7 +536,7 @@ html {
       @include qbal-growExaggerated-enter;
 
       ul li,
-      &>a {
+      & > a {
         color: $panther-black;
       }
     }
@@ -566,7 +565,7 @@ html {
       }
     }
 
-    &__menu-item-dropdown-child:hover>ul {
+    &__menu-item-dropdown-child:hover > ul {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -646,13 +645,11 @@ html {
         @include qbal-slideRight-enter;
 
         .hamburger-menu-button {
-          background-color:
-            white;
+          background-color: white;
           border: none;
           padding-left: 2rem;
         }
       }
-
 
       &__menu-item-login {
         @include qbal-slideLeft-enter;
@@ -709,15 +706,10 @@ html {
       border-right: none;
     }
   }
-
-
-
 }
 
 @include respond(phone) {
-
   .uninav {
-
     &__logo,
     #uninav-logo .chapman-logo {
       width: 100%;
@@ -746,25 +738,24 @@ html.off-canvas__blur {
       }
 
       25% {
-        background-color: rgba(0, 0, 0, .25);
+        background-color: rgba(0, 0, 0, 0.25);
       }
 
       50% {
-        background-color: rgba(0, 0, 0, .50);
+        background-color: rgba(0, 0, 0, 0.5);
       }
 
       75% {
-        background-color: rgba(0, 0, 0, .75);
+        background-color: rgba(0, 0, 0, 0.75);
       }
 
       100% {
-        background-color: rgba(0, 0, 0, .8);
+        background-color: rgba(0, 0, 0, 0.8);
       }
     }
   }
 
   .uninav {
-
     &__logo,
     &__utility-nav--wrapper,
     &__global-nav,
